--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   "devDependencies": {
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
-    "karma-chrome-launcher": "^0.1.7",
+    "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.3.2"
+    "karma-jasmine": "^0.3.2",
+    "karma-teamcity-reporter": "^0.1.2"
   }
 }
