--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "jasmine-core": "^2.1.3",
     "karma": "^0.12.28",
+    "karma-cli": "0.0.4",
     "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.3",
     "karma-jasmine": "^0.3.2",
